[package]
name = "async-test"
authors = ["ricardo@bitchbrothers.com"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.19", features = ["rt-multi-thread", "signal", "time", "macros"] }
tokio-util = { version = "0.7", features = ["rt"] }
